--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <ListView
+        android:id="@+id/appList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,25 +18,36 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
-        <ListView
-            android:id="@+id/appListView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
-        
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="게임 제목 자리"
-            android:textColor="#383838"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="회사 이름 자리"
-            android:layout_marginTop="3dp"
-            android:textColor="#aaaaaa"/>
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="게임 제목 자리"
+                android:textColor="#383838"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="회사 이름 자리"
+                android:layout_marginTop="3dp"
+                android:textColor="#aaaaaa"/>
+
+        </LinearLayout>
+
         
         <LinearLayout
             android:layout_width="match_parent"
