--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
+
+
 
     <ListView
         android:id="@+id/appListView"
@@ -56,31 +55,31 @@
                     android:id="@+id/star1"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/star2" />
+                    android:src="@drawable/star1" />
 
                 <ImageView
                     android:id="@+id/star2"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/star2" />
+                    android:src="@drawable/star1" />
 
                 <ImageView
                     android:id="@+id/star3"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/star2" />
+                    android:src="@drawable/star1" />
 
                 <ImageView
                     android:id="@+id/star4"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/star2" />
+                    android:src="@drawable/star1" />
 
                 <ImageView
                     android:id="@+id/star5"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:src="@drawable/star2" />
+                    android:src="@drawable/star1" />
 
             </LinearLayout>
 
@@ -90,3 +89,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
+
